# nested-value-extractor

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .ruff.toml  LICENSE  Makefile  README.md  pyproject.toml  requirements.dev.txt  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
src/: nested_dict_extractor.py  nested_value_extractor.py
tests/: test_nested_dict_extractor.py  test_nested_value_extractor.py
tests/assets/: example.json
